compiler/src/y.output

state 0
	$accept: .file $end 

	FUNC  shift 4
	VAR  shift 3
	.  error

	declaration  goto 2
	file  goto 1

state 1
	$accept:  file.$end 
	file:  file.declaration 
	file:  file.EOF 

	$end  accept
	EOF  shift 6
	FUNC  shift 4
	VAR  shift 3
	.  error

	declaration  goto 5

state 2
	file:  declaration.    (1)
	declaration:  declaration.NEW_LINE 

	NEW_LINE  shift 7
	.  reduce 1 (src line 78)


state 3
	declaration:  VAR.identifier type 

	IDENTIFIER  shift 9
	.  error

	identifier  goto 8

state 4
	declaration:  FUNC.identifier LPAREN RPAREN type statement_block 
	declaration:  FUNC.identifier LPAREN field_list RPAREN type statement_block 

	IDENTIFIER  shift 9
	.  error

	identifier  goto 10

state 5
	file:  file declaration.    (2)
	declaration:  declaration.NEW_LINE 

	NEW_LINE  shift 7
	.  reduce 2 (src line 82)


state 6
	file:  file EOF.    (3)

	.  reduce 3 (src line 87)


state 7
	declaration:  declaration NEW_LINE.    (19)

	.  reduce 19 (src line 194)


state 8
	declaration:  VAR identifier.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 11

state 9
	identifier:  IDENTIFIER.    (46)

	.  reduce 46 (src line 381)


state 10
	declaration:  FUNC identifier.LPAREN RPAREN type statement_block 
	declaration:  FUNC identifier.LPAREN field_list RPAREN type statement_block 

	LPAREN  shift 16
	.  error


state 11
	declaration:  VAR identifier type.    (16)

	.  reduce 16 (src line 170)


state 12
	type:  INT.    (47)

	.  reduce 47 (src line 392)


state 13
	type:  FLOAT.    (48)

	.  reduce 48 (src line 396)


state 14
	type:  STRING.    (49)

	.  reduce 49 (src line 400)


state 15
	type:  LBRACK.RBRACK type 
	type:  LBRACK.enumerable RBRACK type 

	RBRACK  shift 17
	INT_NUMBER  shift 19
	.  error

	enumerable  goto 18

state 16
	declaration:  FUNC identifier LPAREN.RPAREN type statement_block 
	declaration:  FUNC identifier LPAREN.field_list RPAREN type statement_block 

	IDENTIFIER  shift 9
	RPAREN  shift 20
	.  error

	identifier  goto 23
	field  goto 22
	field_list  goto 21

state 17
	type:  LBRACK RBRACK.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 24

state 18
	type:  LBRACK enumerable.RBRACK type 

	RBRACK  shift 25
	.  error


state 19
	enumerable:  INT_NUMBER.    (55)

	.  reduce 55 (src line 438)


state 20
	declaration:  FUNC identifier LPAREN RPAREN.type statement_block 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 26

state 21
	declaration:  FUNC identifier LPAREN field_list.RPAREN type statement_block 
	field_list:  field_list.COMMA field 

	COMMA  shift 28
	RPAREN  shift 27
	.  error


state 22
	field_list:  field.    (20)

	.  reduce 20 (src line 200)


state 23
	field:  identifier.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 29

state 24
	type:  LBRACK RBRACK type.    (50)

	.  reduce 50 (src line 404)


state 25
	type:  LBRACK enumerable RBRACK.type 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 30

state 26
	declaration:  FUNC identifier LPAREN RPAREN type.statement_block 

	LBRACE  shift 32
	.  error

	statement_block  goto 31

state 27
	declaration:  FUNC identifier LPAREN field_list RPAREN.type statement_block 

	LBRACK  shift 15
	INT  shift 12
	FLOAT  shift 13
	STRING  shift 14
	.  error

	type  goto 33

state 28
	field_list:  field_list COMMA.field 

	IDENTIFIER  shift 9
	.  error

	identifier  goto 23
	field  goto 34

state 29
	field:  identifier type.    (22)

	.  reduce 22 (src line 210)


state 30
	type:  LBRACK enumerable RBRACK type.    (51)

	.  reduce 51 (src line 411)


state 31
	declaration:  FUNC identifier LPAREN RPAREN type statement_block.    (17)

	.  reduce 17 (src line 177)


state 32
	statement_block:  LBRACE.NEW_LINE statement_list RBRACE 

	NEW_LINE  shift 35
	.  error


state 33
	declaration:  FUNC identifier LPAREN field_list RPAREN type.statement_block 

	LBRACE  shift 32
	.  error

	statement_block  goto 36

state 34
	field_list:  field_list COMMA field.    (21)

	.  reduce 21 (src line 204)


state 35
	statement_block:  LBRACE NEW_LINE.statement_list RBRACE 

	IF  shift 44
	FOR  shift 45
	RETURN  shift 42
	PRINT  shift 43
	FUNC  shift 4
	COMMENT  shift 41
	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	VAR  shift 3
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 40
	number  goto 52
	declaration  goto 39
	identifier  goto 47
	statement  goto 38
	statement_list  goto 37

state 36
	declaration:  FUNC identifier LPAREN field_list RPAREN type statement_block.    (18)

	.  reduce 18 (src line 185)


state 37
	statement_block:  LBRACE NEW_LINE statement_list.RBRACE 
	statement_list:  statement_list.statement 

	RBRACE  shift 56
	IF  shift 44
	FOR  shift 45
	RETURN  shift 42
	PRINT  shift 43
	FUNC  shift 4
	COMMENT  shift 41
	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	VAR  shift 3
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 40
	number  goto 52
	declaration  goto 39
	identifier  goto 47
	statement  goto 57

state 38
	statement_list:  statement.    (5)
	statement:  statement.NEW_LINE 

	NEW_LINE  shift 58
	.  reduce 5 (src line 99)


39: shift/reduce conflict (shift 7(0), red'n 7(0)) on NEW_LINE
state 39
	statement:  declaration.    (7)
	declaration:  declaration.NEW_LINE 

	NEW_LINE  shift 7
	.  reduce 7 (src line 109)


state 40
	statement:  expr.ASSIGNED expr NEW_LINE 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ASSIGNED  shift 59
	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error


state 41
	statement:  COMMENT.    (9)

	.  reduce 9 (src line 122)


state 42
	statement:  RETURN.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 71
	number  goto 52
	identifier  goto 47

state 43
	statement:  PRINT.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 72
	number  goto 52
	identifier  goto 47

state 44
	statement:  IF.expr statement_block ELSE statement_block 
	statement:  IF.expr statement_block 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 73
	number  goto 52
	identifier  goto 47

state 45
	statement:  FOR.expr statement_block 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 74
	number  goto 52
	identifier  goto 47

state 46
	expr:  LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 75
	number  goto 52
	identifier  goto 47

47: shift/reduce conflict (shift 77(0), red'n 44(0)) on LPAREN
state 47
	expr:  identifier.LBRACK expr RBRACK 
	expr:  identifier.LPAREN expr_list RPAREN 
	expr:  identifier.LPAREN RPAREN 
	expr:  identifier.    (44)

	LBRACK  shift 76
	LPAREN  shift 77
	.  reduce 44 (src line 371)


state 48
	expr:  SIN.LPAREN expr RPAREN 

	LPAREN  shift 78
	.  error


state 49
	expr:  COS.LPAREN expr RPAREN 

	LPAREN  shift 79
	.  error


state 50
	expr:  SQRT.LPAREN expr RPAREN 

	LPAREN  shift 80
	.  error


state 51
	expr:  SUB.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 81
	number  goto 52
	identifier  goto 47

state 52
	expr:  number.    (45)

	.  reduce 45 (src line 375)


state 53
	number:  enumerable.    (52)

	.  reduce 52 (src line 424)


state 54
	number:  FLOAT_NUMBER.    (53)

	.  reduce 53 (src line 428)


state 55
	number:  STRING_VALUE.    (54)

	.  reduce 54 (src line 432)


state 56
	statement_block:  LBRACE NEW_LINE statement_list RBRACE.    (4)

	.  reduce 4 (src line 92)


state 57
	statement_list:  statement_list statement.    (6)
	statement:  statement.NEW_LINE 

	NEW_LINE  shift 58
	.  reduce 6 (src line 103)


state 58
	statement:  statement NEW_LINE.    (15)

	.  reduce 15 (src line 164)


state 59
	statement:  expr ASSIGNED.expr NEW_LINE 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 82
	number  goto 52
	identifier  goto 47

state 60
	expr:  expr ADD.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 83
	number  goto 52
	identifier  goto 47

state 61
	expr:  expr SUB.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 84
	number  goto 52
	identifier  goto 47

state 62
	expr:  expr MUL.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 85
	number  goto 52
	identifier  goto 47

state 63
	expr:  expr QUO.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 86
	number  goto 52
	identifier  goto 47

state 64
	expr:  expr EQUAL.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 87
	number  goto 52
	identifier  goto 47

state 65
	expr:  expr NOT_EQUAL.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 88
	number  goto 52
	identifier  goto 47

state 66
	expr:  expr GREATE.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 89
	number  goto 52
	identifier  goto 47

state 67
	expr:  expr LESS.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 90
	number  goto 52
	identifier  goto 47

state 68
	expr:  expr AND.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 91
	number  goto 52
	identifier  goto 47

state 69
	expr:  expr OR.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 92
	number  goto 52
	identifier  goto 47

state 70
	expr:  expr REM.expr 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 93
	number  goto 52
	identifier  goto 47

71: shift/reduce conflict (shift 61(2), red'n 10(0)) on SUB
state 71
	statement:  RETURN expr.    (10)
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  reduce 10 (src line 126)


72: shift/reduce conflict (shift 61(2), red'n 11(0)) on SUB
state 72
	statement:  PRINT expr.    (11)
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  reduce 11 (src line 134)


state 73
	statement:  IF expr.statement_block ELSE statement_block 
	statement:  IF expr.statement_block 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	LBRACE  shift 32
	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error

	statement_block  goto 94

state 74
	statement:  FOR expr.statement_block 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	LBRACE  shift 32
	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error

	statement_block  goto 95

state 75
	expr:  LPAREN expr.RPAREN 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	RPAREN  shift 96
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error


state 76
	expr:  identifier LBRACK.expr RBRACK 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 97
	number  goto 52
	identifier  goto 47

state 77
	expr:  identifier LPAREN.expr_list RPAREN 
	expr:  identifier LPAREN.RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	RPAREN  shift 99
	.  error

	enumerable  goto 53
	expr  goto 100
	number  goto 52
	expr_list  goto 98
	identifier  goto 47

state 78
	expr:  SIN LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 101
	number  goto 52
	identifier  goto 47

state 79
	expr:  COS LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 102
	number  goto 52
	identifier  goto 47

state 80
	expr:  SQRT LPAREN.expr RPAREN 

	INT_NUMBER  shift 19
	FLOAT_NUMBER  shift 54
	STRING_VALUE  shift 55
	IDENTIFIER  shift 9
	SUB  shift 51
	SIN  shift 48
	COS  shift 49
	SQRT  shift 50
	LPAREN  shift 46
	.  error

	enumerable  goto 53
	expr  goto 103
	number  goto 52
	identifier  goto 47

state 81
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 
	expr:  SUB expr.    (43)

	.  reduce 43 (src line 364)


state 82
	statement:  expr ASSIGNED expr.NEW_LINE 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	NEW_LINE  shift 104
	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error


state 83
	expr:  expr.ADD expr 
	expr:  expr ADD expr.    (29)
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 29 (src line 255)


state 84
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr SUB expr.    (30)
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 30 (src line 263)


state 85
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr MUL expr.    (31)
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	.  reduce 31 (src line 271)


state 86
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr QUO expr.    (32)
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	.  reduce 32 (src line 279)


state 87
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr EQUAL expr.    (33)
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 33 (src line 287)


state 88
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr NOT_EQUAL expr.    (34)
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 34 (src line 295)


state 89
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr GREATE expr.    (35)
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 35 (src line 303)


state 90
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr LESS expr.    (36)
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 36 (src line 311)


state 91
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr AND expr.    (37)
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 37 (src line 319)


state 92
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr OR expr.    (38)
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	.  reduce 38 (src line 327)


state 93
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 
	expr:  expr REM expr.    (39)

	.  reduce 39 (src line 335)


state 94
	statement:  IF expr statement_block.ELSE statement_block 
	statement:  IF expr statement_block.    (13)

	ELSE  shift 105
	.  reduce 13 (src line 150)


state 95
	statement:  FOR expr statement_block.    (14)

	.  reduce 14 (src line 157)


state 96
	expr:  LPAREN expr RPAREN.    (25)

	.  reduce 25 (src line 229)


state 97
	expr:  identifier LBRACK expr.RBRACK 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	RBRACK  shift 106
	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error


state 98
	expr_list:  expr_list.COMMA expr 
	expr:  identifier LPAREN expr_list.RPAREN 

	COMMA  shift 107
	RPAREN  shift 108
	.  error


state 99
	expr:  identifier LPAREN RPAREN.    (28)

	.  reduce 28 (src line 249)


state 100
	expr_list:  expr.    (23)
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  reduce 23 (src line 219)


state 101
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 
	expr:  SIN LPAREN expr.RPAREN 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	RPAREN  shift 109
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error


state 102
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.EQUAL expr 
	expr:  expr.NOT_EQUAL expr 
	expr:  expr.GREATE expr 
	expr:  expr.LESS expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.REM expr 
	expr:  COS LPAREN expr.RPAREN 

	ADD  shift 60
	SUB  shift 61
	MUL  shift 62
	QUO  shift 63
	REM  shift 70
	RPAREN  shift 110
	EQUAL  shift 64
	NOT_EQUAL  shift 65
	GREATE  shift 66
	AND  shift 68
	OR  shift 69
	LESS  shift 67
	.  error

